fix angular issues